fix gap

--- a/src/main/webapp/css/home.css
+++ b/src/main/webapp/css/home.css
@@ -71,7 +71,7 @@ body {
 
 .header-image img {
     width: 100%;
-    height: 310px;
+    height: 350px;
     z-index: 1;
     position: relative;
     filter: brightness(0.4);
@@ -87,4 +87,34 @@ body {
     z-index: 2;
     font-family: "InriaSerif Bold";
     font-size: 26px;
+}
+
+.background {
+    position: relative;
+    z-index: 1;
+}
+
+.types-container {
+    position: absolute;
+    top: 0%;
+    left: 50%;
+    transform: translateX(-50%);
+    display: flex;
+    margin-top: 130px;
+    justify-content: center; /* ou space-between conforme necessário */
+    width: 100%; /* Ajuste conforme necessário */
+    z-index: 2;
+    padding: 10px;
+    gap: 88px;
+
+
+}
+
+.types-container a {
+    color: white; /* Cor do texto */
+    text-decoration: none; /* Remove o sublinhado */
+    font-size: 1.5em; /* Tamanho do texto */
+    padding: 10px;
+    font-family: "InriaSans Regular";
+
 }
